Resolve entry vagueness